--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "malta-dev-srv",
-  "version": "1.1.3",
-  "description": "Malta plugin to start a raw minimal development server",
-  "main": "./index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fedeghe/malta-dev-srv.git"
-  },
-  "author": "Federico Ghedina <federico.ghedina@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/fedeghe/malta-dev-srv#readme",
-  "dependencies": {
-    "malta": ">=3.8.14"
-  }
+    "name": "malta-dev-srv",
+    "version": "1.1.3",
+    "description": "Malta plugin to start a raw minimal development server",
+    "main": "./index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/fedeghe/malta-dev-srv.git"
+    },
+    "keywords": [
+        "malta",
+        "malta plugin",
+        "malta web server",
+        "malta dev web server"
+    ],
+    "author": "Federico Ghedina <fedeghe@gmail.com>",
+    "license": "MIT",
+    "homepage": "https://github.com/fedeghe/malta-dev-srv#readme",
+    "dependencies": {
+        "malta": ">=3.8.14"
+    }
 }
