--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "license": "MIT",
     "homepage": "https://github.com/fedeghe/malta-dev-srv#readme",
     "dependencies": {
-        "malta": ">=3.8.14"
+        "malta": "^4.0.4"
     }
 }
